Refactor: Improve project info popup and navbar
- Update navbar style with rounded corners
- Fix project popup close
- Improve project display logic

--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.cdnfonts.com/css/br-cobane" rel="stylesheet">
   <title>portfolio</title>
+  <style>
+    #portal {
+      z-index: 10;
+      position: fixed;
+    }
+  </style>
+
 </head>
 
 <body>
-  <div id="root"></div>
-
+  <div id="root">
+  </div>
+  <div id="popup"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
