--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/logo.png" />
+  <meta property="og:title" content="Ayush Awachar Portfolio" />
+  <meta property="og:description"
+    content="Ayush Awachar is a React.js developer crafting high-performance UIs and modern web experiences. Explore my projects, frontend builds, and problem-solving approach" />
+  <meta property="og:image" content="https://portfolio-drab-seven-7h1hkpd6hk.vercel.app/logo.png" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.cdnfonts.com/css/br-cobane" rel="stylesheet">
-  <title>portfolio</title>
+  <title>Ayush Awachar</title>
   <style>
     #portal {
       z-index: 10;
